<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="loginModel"
            type="android.example.com.udacityfiristproject.models.LoginModel" />

        <variable
            name="loginViewModel"
            type="android.example.com.udacityfiristproject.ui.login.LoginViewModel" />
    </data>

    <!--i've used linear layout because it's a simple layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/email_text"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginEnd="@dimen/margin_end"
            android:text="@string/email" />

        <EditText
            android:id="@+id/email_editText"
            style="@style/text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_end"
            android:hint="@string/email_hint"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:text="@={loginModel.email}" />

        <TextView
            android:id="@+id/password_text"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/margin_between_field"
            android:layout_marginEnd="@dimen/margin_end"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password_editText"
            style="@style/text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_end"
            android:hint="@string/password_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:text="@={loginModel.password}" />

        <Button
            android:id="@+id/login_button"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_field"
            android:onClick="@{()->loginViewModel.onLoginClicked()}"
            android:text="@string/login_with_email"
            android:textAllCaps="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_between_field"
            android:fontFamily="@font/roboto"
            android:text="@string/or_signup"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/signup_button"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_field"
            android:onClick="@{()->loginViewModel.onLoginClicked()}"
            android:text="@string/signup"
            android:textAllCaps="false" />

    </LinearLayout>

</layout>