<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="instructionViewModel"
            type="android.example.com.udacityfirstproject.ui.instruction.InstructionViewModel" />
    </data>

    <!--i've used ConstraintLayout because it's a complex design-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/title_text"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/instruction_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/instruction_points_title_text"
            style="@style/text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/instruction_points_title"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text" />

        <TextView
            android:id="@+id/first_bullet_text"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bullet"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/first_point_text" />


        <TextView
            android:id="@+id/second_bullet_text"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bullet"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/second_point_text" />

        <TextView
            android:id="@+id/third_bullet_text"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bullet"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/third_point_text" />


        <TextView
            android:id="@+id/first_point_text"
            style="@style/text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/first_note_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/first_bullet_text"
            app:layout_constraintTop_toBottomOf="@+id/instruction_points_title_text" />

        <TextView
            android:id="@+id/second_point_text"
            style="@style/text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/second_note_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/second_bullet_text"
            app:layout_constraintTop_toBottomOf="@+id/first_point_text" />

        <TextView
            android:id="@+id/third_point_text"
            style="@style/text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/third_note_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/third_bullet_text"
            app:layout_constraintTop_toBottomOf="@+id/second_point_text" />

        <Button
            android:id="@+id/start_button"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="28dp"
            android:onClick="@{()->instructionViewModel.onInstructionButtonClicked()}"
            android:text="@string/lets_start"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>